[gd_scene load_steps=17 format=2]

[ext_resource path="res://BlockManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/TimeLabel.gd" type="Script" id=3]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://levels/1PGame.gd" type="Script" id=5]
[ext_resource path="res://music/test3.ogg" type="AudioStream" id=6]
[ext_resource path="res://scripts/BlockPreview.gd" type="Script" id=7]
[ext_resource path="res://scripts/HeightLabel.gd" type="Script" id=8]
[ext_resource path="res://Tower.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/GameOverScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://background/balls.png" type="Texture" id=11]
[ext_resource path="res://levels/Background.gd" type="Script" id=12]
[ext_resource path="res://background/balls.material" type="Material" id=13]
[ext_resource path="res://background/stripes.png" type="Texture" id=14]
[ext_resource path="res://background/stripes.material" type="Material" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="1PGame" type="Node"]
script = ExtResource( 5 )

[node name="Tower" parent="." instance=ExtResource( 9 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="BlockManager" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -200 )
current = true
script = ExtResource( 4 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 128

[node name="HeightLabel" type="Label" parent="HUD"]
anchor_top = 0.402
anchor_right = 0.578
anchor_bottom = 0.402
margin_left = 35.0
margin_top = -177.08
margin_right = 35.0
margin_bottom = -163.08
text = "Placeholder"
clip_text = true
script = ExtResource( 8 )

[node name="BlockPreview" type="Panel" parent="HUD"]
margin_left = 745.0
margin_top = 54.0
margin_right = 845.0
margin_bottom = 129.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="BlockPreviewLabel" type="Label" parent="HUD/BlockPreview"]
margin_left = 1.0
margin_top = -14.0
margin_right = 73.0
text = "Next block:"

[node name="SpriteContainer" type="Control" parent="HUD/BlockPreview"]
anchor_left = 0.5
anchor_top = 0.513333
anchor_right = 0.5
anchor_bottom = 0.513333
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TimeLabel" type="Label" parent="HUD"]
margin_left = 37.0
margin_top = 89.0
margin_right = 110.0
margin_bottom = 115.0
text = "Remaining Time: "
clip_text = true
script = ExtResource( 3 )

[node name="GameOverScreen" parent="HUD" instance=ExtResource( 10 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -24.0

[node name="Background" type="CanvasLayer" parent="."]
layer = -128
script = ExtResource( 12 )

[node name="Stripes" type="TextureRect" parent="Background"]
material = ExtResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
stretch_mode = 2

[node name="Balls2" type="TextureRect" parent="Background"]
material = ExtResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -133.0
margin_right = -513.0
margin_bottom = -534.0
rect_scale = Vector2( 2, 4 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="Balls" type="TextureRect" parent="Background"]
material = ExtResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -683.0
margin_bottom = -500.0
rect_scale = Vector2( 3, 6 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.843137 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
